Change path to weights

--- a/training.ipynb
+++ b/training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b0fd9b01",
    "metadata": {},
    "outputs": [],
@@ -30,8 +30,7 @@
     "import shutil\n",
     "import os\n",
     "\n",
-    "config_path = \"config_medium.yaml\"\n",
-    "\n",
+    "config_path = \"config.yaml\"\n",
     "\n",
     "# Load the YAML\n",
     "with open(config_path, \"r\") as f:\n",
@@ -51,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d6f204dd",
    "metadata": {},
    "outputs": [],
@@ -107,10 +106,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "2d0fccca",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/angel/anaconda3/envs/thesis/lib/python3.10/site-packages/torch/nn/utils/weight_norm.py:143: FutureWarning: `torch.nn.utils.weight_norm` is deprecated in favor of `torch.nn.utils.parametrizations.weight_norm`.\n",
+      "  WeightNorm.apply(module, name, dim)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model parameters: 5,146,624\n",
+      "Discriminators parameters: 377,864\n",
+      "Total parameters: 5,524,488\n"
+     ]
+    }
+   ],
    "source": [
     "import yaml\n",
     "from src.utils import load_model_from_config, load_discriminators_from_config\n",
@@ -191,7 +208,279 @@
    "execution_count": null,
    "id": "85736873",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9012b509e8c64ceab7d358091a3d8e27",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  7%|7         | 73/1000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "691c74345e0e4fa783accf2e9e8a60cc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Epoch progress:   0%|          | 0/1366 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bbcb877b1b9045588b349d7b6b003818",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation progress:   0%|          | 0/342 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "warning: audio amplitude out of range, auto clipped.\n",
+      "warning: audio amplitude out of range, auto clipped.\n",
+      "warning: audio amplitude out of range, auto clipped.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2187089e9b3e4be3a58353895d0492a7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Epoch progress:   0%|          | 0/1366 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cd92ade2581f4a0b9414678dbdb44aca",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Epoch progress:   0%|          | 0/1366 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5056298aabe54124ba7968960cbc5a99",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation progress:   0%|          | 0/342 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "warning: audio amplitude out of range, auto clipped.\n",
+      "warning: audio amplitude out of range, auto clipped.\n",
+      "warning: audio amplitude out of range, auto clipped.\n",
+      "warning: audio amplitude out of range, auto clipped.\n",
+      "warning: audio amplitude out of range, auto clipped.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b96d7fd3628141deb6bac5249567df3b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Epoch progress:   0%|          | 0/1366 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b306c610caf84894bf8d1c81aab812dd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Epoch progress:   0%|          | 0/1366 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ab9e6334a16f4b7fb0fba1498768fda4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation progress:   0%|          | 0/342 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "warning: audio amplitude out of range, auto clipped.\n",
+      "warning: audio amplitude out of range, auto clipped.\n",
+      "warning: audio amplitude out of range, auto clipped.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "38df07f2c1234b4181c80d39e9c84c41",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Epoch progress:   0%|          | 0/1366 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7d943b58e7e24fee8360d3fe5c27f189",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Epoch progress:   0%|          | 0/1366 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "51dc820ec0b34578b5f939ffa86d95a7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation progress:   0%|          | 0/342 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "warning: audio amplitude out of range, auto clipped.\n",
+      "warning: audio amplitude out of range, auto clipped.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9ad2c5efea484937aaf46ce85f54ec0d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Epoch progress:   0%|          | 0/1366 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c5aa91592eef478ca66026e74cf55d05",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Epoch progress:   0%|          | 0/1366 [00:01<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "35eef0b497c4400784ae996e55e50ede",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation progress:   0%|          | 0/342 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "warning: audio amplitude out of range, auto clipped.\n",
+      "warning: audio amplitude out of range, auto clipped.\n",
+      "warning: audio amplitude out of range, auto clipped.\n",
+      "warning: audio amplitude out of range, auto clipped.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8ef88417a4a84bc890bba5632fa55855",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Epoch progress:   0%|          | 0/1366 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "training_cfg = cfg[\"training\"]\n",
     "num_epochs = training_cfg[\"num_epochs\"]\n",
